# svelte-fastapi-template

./: .env  SETUP.md  compose.override.yml  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
admin/: Dockerfile  package.json  vite.config.ts
backend/: pyproject.toml
backend/app/: backend_pre_start.py  crud.py  initial_data.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1a31ce608336_add_cascade_delete_relationships.py  9c0a54914c78_add_max_length_for_string_varchar_.py  d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py  e2412789c190_initialize_models.py  fe56fa70289e_add_created_at_to_user_and_item.py
backend/app/api/: deps.py
backend/app/api/routes/: items.py  login.py  private.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  item.py  user.py
frontend/: Dockerfile  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/components/dashboard/sidebar/: app-sidebar.svelte  nav-main.svelte  nav-user.svelte  team-switcher.svelte
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte
frontend/src/lib/constants/: sidebar.ts
frontend/src/lib/stores/: notifications.svelte.ts
frontend/src/lib/utils/: auth.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/(auth)/forgot-password/: +page.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/reset-password/: +page.svelte
frontend/src/routes/(auth)/signup/: +page.svelte
