[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dodopayments>=1.93.0",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.49",
    "ulid>=1.1",
    "uvicorn>=0.44.0",
]
